# air-quality-rss

./: .env.sh.template  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  Makefile  README.md  build.sh  burst.sh  cJSON-wrapper.c  gnucobol-microhttpd.cob  http-client.cob  myserver.cob  mythread.c  pollen-rss.cob  repro.cob  run.sh  test.sh
.github/workflows/: release.yml  tests.yml
cmake/: pollutant.cmake
docs/: api.html  openapi.json
examples/: CMakeLists.txt  example_pollutant.c  example_pollutant.f90  example_pollutant_atmo_france.c  example_pollutant_atmo_france.f90  example_pollutant_prevair.c  example_pollutant_prevair.f90
http/: curl-write-callback.cob  http-client.cob
json/: json-parser.cob
src/: pollen-parser.cob  pollen-render.cob  pollen-router.cob  pollen-rss.cob  pollen-server.cob
src/air-quality/: air-quality-rss.cob
src/air-quality/api/: air-quality-router.cob  air-quality-server.cob
src/api/: pollen-router.cob  pollen-server.cob
src/c-interop/: c-string.cob
src/http/: curl-write-callback.cob  http-client.cob
src/json/: json-parser.cob
src/math/: coordinates.cob
src/pollen/api/: pollen-router.cob  pollen-server.cob
src/pollen/service/: pollen-data-source.cob  pollen-data.cpy  pollen-parser.cob  pollen-render.cob  pollen-service.cob
src/pollutant/provider/: pollutant-netcdf-data.f90  pollutant-provider.f90  pollutant-resource-parser.f90
src/pollutant/provider/atmo-france/: pollutant-data.f90  pollutant-fetcher.f90  pollutant-parser.f90  pollutant-provider.f90
src/pollutant/provider/atmo-france/admin/: pollutant-fetcher.f90  pollutant-parser.f90
src/pollutant/provider/atmo-france/tabular/: pollutant-fetcher.f90  pollutant-parser.f90
src/pollutant/provider/prevair/: pollutant-calculator.f90  pollutant-netcdf-parser.f90  pollutant-provider.f90  pollutant-resource-parser.f90
src/pollutant/service/: pollutant-data.cpy  pollutant-index-emoji.cob  pollutant-render.cob  pollutant-service.cob
src/pollutant/service/atmo-france/: pollutant-data.cpy  pollutant-render.cob  pollutant-service.cob
src/pollutant/service/prevair/: pollutant-render.cob  pollutant-service.cob
src/pollutant/support/: geo.f90
src/service/: pollen-data-source.cob  pollen-parser.cob  pollen-render.cob  pollen-service.cob
src/support/c-interop/: c-string.cob
src/support/cob/c-interop/: c-string.cob
src/support/cob/config/: env-config.cob
src/support/cob/geo/: coordinates.cob
src/support/cob/http/: curl-write-callback.cob  http-client.cob  remote-service-response.cpy
src/support/cob/json/: json-parser.cob
src/support/cob/rss/: index-display.cob  render-rss.cob
src/support/cob/xml/: encode.cob
src/support/f90/: c-string.f90  datetime.f90  file-downloader.f90
src/support/f90/atmo-france/: token.f90
src/support/f90/config/: env-config.f90
src/support/geo/: coordinates.cob
src/support/http/: curl-write-callback.cob  http-client.cob  query-param-parser.cob  remote-service-response.cpy
src/support/json/: json-parser.cob
src/support/xml/: encode.cob
test/fixtures/missing-latitude/: expected-local-response-body.txt
test/fixtures/missing-longitude/: expected-local-response-body.txt
test/fixtures/ok/: expected-local-response-body.txt
test/fixtures/pollen/ok/: expected-local-response-body.txt  mock-remote-response-body.txt
test/fixtures/pollen/remote-server-200-error/: mock-remote-response-body.txt
test/fixtures/pollen/remote-server-500-error/: expected-local-response-body.txt  mock-remote-response-body.txt
test/fixtures/pollen/remote-server-slow/: mock-remote-response-config.json
test/fixtures/pollen/too-many-pollens/: expected-local-response-body.txt
test/fixtures/pollutant/all-invalid-data/: PREVAIR.prevision.20250727.moyj0.PM25.public.nc  expected-local-response-body.txt  mock-remote-response-body.txt
test/fixtures/pollutant/all-missing-data/: expected-local-response-body.txt
test/fixtures/pollutant/atmo-france/admin/all-missing-data/: expected-local-response-body.txt
test/fixtures/pollutant/atmo-france/admin/ok/: expected-local-response-body.txt  mock-remote-response-body.txt
test/fixtures/pollutant/atmo-france/admin/remote-server-slow/: mock-remote-response-config.json
test/fixtures/pollutant/atmo-france/admin/some-missing-data/: expected-local-response-body.txt  (+1 more)
test/fixtures/pollutant/atmo-france/all-missing-data/: expected-local-response-body.txt
test/fixtures/pollutant/atmo-france/ok/: expected-local-response-body.txt
test/fixtures/pollutant/atmo-france/some-missing-data/: expected-local-response-body.txt
test/fixtures/pollutant/ok/: expected-local-response-body.txt  mock-remote-response-body.txt
test/fixtures/pollutant/prevair/all-missing-data/: expected-local-response-body.txt
test/fixtures/pollutant/prevair/ok/: PREVAIR.prevision.__TODAY_SHORT__.moyj0.O3.public.nc  expected-local-response-body.txt
test/fixtures/pollutant/prevair/remote-server-500-error/: mock-remote-response-body.txt
test/fixtures/pollutant/prevair/remote-server-slow/: mock-remote-response-body.txt
test/fixtures/pollutant/prevair/some-invalid-data/: expected-local-response-body.txt  mock-remote-response-body.txt
test/fixtures/pollutant/some-invalid-data/: expected-local-response-body.txt  mock-remote-response-body.txt
test/fixtures/remote-server-offline/: expected-local-response-body.txt
test/fixtures/too-many-pollens/: expected-local-response-body.txt  mock-remote-response-body.txt
test/mockserver/: mockserver.mjs
test/scenarios/: setup_suite.bash  test-client-errors.bats  test-remote-server-errors.bats  test-success.bats
test/scenarios/api/: test-client-errors.bats
test/scenarios/pollen/: test-remote-server-errors.bats  test-success.bats
test/scenarios/pollutant/: test-success.bats
test/scenarios/pollutant/atmo-france/: test-admin-remote-server-errors.bats  test-admin-success.bats  test-success.bats  test-tabular-remote-server-errors.bats  test-tabular-success.bats
test/scenarios/pollutant/prevair/: test-remote-server-errors.bats  test-success.bats
test/support/: test-actions.bash
(+6 files in other folders)
